--- a/sass/stylesheets/screen.css
+++ b/sass/stylesheets/screen.css
@@ -310,15 +310,7 @@ main .whyJoinUs .flip-card-back {
   color: white;
   transform: rotateY(180deg);
 }
-/* line 82, ../sass/_global.scss */
-main .whyJoinUs .flip-card-back p {
-  position: relative;
-  float: left;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-/* line 91, ../sass/_global.scss */
+/* line 84, ../sass/_global.scss */
 main .wereHiring {
   /* nail */
 }
@@ -330,19 +322,19 @@ main .wereHiring {
     transform: rotate(-3deg);
   }
 }
-/* line 101, ../sass/_global.scss */
+/* line 94, ../sass/_global.scss */
 main .wereHiring .swing {
   animation: swing ease-in-out 7s infinite alternate;
   transform-origin: center -20px;
   float: left;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
-/* line 106, ../sass/_global.scss */
+/* line 99, ../sass/_global.scss */
 main .wereHiring .swing img {
   border: 5px solid #f8f8f8;
   display: block;
 }
-/* line 110, ../sass/_global.scss */
+/* line 103, ../sass/_global.scss */
 main .wereHiring .swing:after {
   content: '';
   position: absolute;
@@ -356,7 +348,7 @@ main .wereHiring .swing:after {
   border-right: none;
   transform: rotate(45deg);
 }
-/* line 123, ../sass/_global.scss */
+/* line 116, ../sass/_global.scss */
 main .wereHiring .swing:before {
   content: '';
   position: absolute;
@@ -369,55 +361,55 @@ main .wereHiring .swing:before {
   background: #000;
 }
 @media screen and (max-width: 575.98px) {
-  /* line 137, ../sass/_global.scss */
+  /* line 130, ../sass/_global.scss */
   main .socialContainer iframe {
     width: 300px !important;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 767.98px) {
-  /* line 137, ../sass/_global.scss */
+  /* line 130, ../sass/_global.scss */
   main .socialContainer iframe {
     width: 300px !important;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991.98px) {
-  /* line 137, ../sass/_global.scss */
+  /* line 130, ../sass/_global.scss */
   main .socialContainer iframe {
     width: 300px !important;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1199.98px) {
-  /* line 137, ../sass/_global.scss */
+  /* line 130, ../sass/_global.scss */
   main .socialContainer iframe {
     width: 400px !important;
   }
 }
 @media screen and (max-width: 575.98px) {
-  /* line 152, ../sass/_global.scss */
+  /* line 145, ../sass/_global.scss */
   main .tss-gallery-holder {
     width: 100% !important;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 767.98px) {
-  /* line 152, ../sass/_global.scss */
+  /* line 145, ../sass/_global.scss */
   main .tss-gallery-holder {
     width: 100% !important;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991.98px) {
-  /* line 152, ../sass/_global.scss */
+  /* line 145, ../sass/_global.scss */
   main .tss-gallery-holder {
     width: 50% !important;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1199.98px) {
-  /* line 152, ../sass/_global.scss */
+  /* line 145, ../sass/_global.scss */
   main .tss-gallery-holder {
     width: 50% !important;
   }
 }
 @media screen and (min-width: 1200px) {
-  /* line 152, ../sass/_global.scss */
+  /* line 145, ../sass/_global.scss */
   main .tss-gallery-holder {
     width: 50% !important;
   }
